--- a/HackerRank/equal/Makefile
+++ b/HackerRank/equal/Makefile
@@ -1,4 +1,4 @@
-DIFF_OPTIONS=-y --strip-trailing-cr --ignore-space-change --suppress-common-lines
+DIFF_OPTIONS=-y --strip-trailing-cr -w
 build:
 	echo "g++"
 	g++ main.cpp -std=c++11 -o main.exe
@@ -17,19 +17,8 @@ tests: tests_cleanup
 	./main.exe < in/input00.txt > out/output00.txt
 	./main.exe < in/input01.txt > out/output01.txt
 	./main.exe < in/input02.txt > out/output02.txt
-	./main.exe < in/input03.txt > out/output03.txt
-	./main.exe < in/input04.txt > out/output04.txt
-	./main.exe < in/input05.txt > out/output05.txt
-	./main.exe < in/input06.txt > out/output06.txt
-	./main.exe < in/input07.txt > out/output07.txt
-	./main.exe < in/input08.txt > out/output08.txt
-	./main.exe < in/input09.txt > out/output09.txt
 	./main.exe < in/input10.txt > out/output10.txt
-	./main.exe < in/input11.txt > out/output11.txt
-	./main.exe < in/input12.txt > out/output12.txt
-	./main.exe < in/input13.txt > out/output13.txt
 	./main.exe < in/input14.txt > out/output14.txt
-	./main.exe < in/input15.txt > out/output15.txt
 	diff -r expected out $(DIFF_OPTIONS) > logs/diff.log
 clean: tests_cleanup
 	rm -f main.exe
