codeforces c922C new test

--- a/codeforces/rcxr/c922C/Makefile
+++ b/codeforces/rcxr/c922C/Makefile
@@ -23,6 +23,7 @@ tests: clean build
 	bin/main.exe < in/input05.txt > out/output05.txt
 	bin/main.exe < in/input06.txt > out/output06.txt
 	bin/main.exe < in/input07.txt > out/output07.txt
+	bin/main.exe < in/input08.txt > out/output08.txt
 	diff -r expected out $(DIFF_OPTIONS) > logs/diff.log
 clean: tests_cleanup
 	echo "bin cleanup"
