HackerRank cloudy-day fixing test cases

--- a/HackerRank/rcxr/cloudy-day/Makefile
+++ b/HackerRank/rcxr/cloudy-day/Makefile
@@ -1,4 +1,4 @@
-DIFF_OPTIONS=-y --strip-trailing-cr -w
+DIFF_OPTIONS=-y -w --strip-trailing-cr --suppress-common-lines
 build:
 	echo "g++"
 	mkdir bin -p
